# diploma_deepfake

./: .gitignore  LICENSE  README.md  demo_server.py  pyproject.toml
.github/workflows/: ci.yml
configs/: adaptation.yaml  base.yaml  efficient_tcn.yaml
docker/: Dockerfile  docker-compose.yml
notebooks/: celebdf_test.json  final_results.csv  kaggle_finetune_v2.ipynb  kaggle_train_dfdc.ipynb  kaggle_train_v2.ipynb  train.json  training_history.csv  val.json
scripts/: download_weights.py  evaluate.py  export_onnx.py  train.py
src/deepfake_detector/: __init__.py  cli.py
src/deepfake_detector/adaptation/: __init__.py  adaptive_trainer.py  checkpoint_manager.py  monitor.py
src/deepfake_detector/api/: main.py  schemas.py  tasks.py
src/deepfake_detector/inference/: __init__.py  gradcam.py  predictor.py
src/deepfake_detector/models/: __init__.py  full_model.py  metric_head.py  spatial_encoder.py  temporal_encoder.py
src/deepfake_detector/preprocessing/: __init__.py  aligner.py  face_detector.py  normalizer.py  video_loader.py
src/deepfake_detector/training/: __init__.py  augmentation.py  dataset.py  losses.py  trainer.py
src/deepfake_detector/utils/: config.py  logging.py  seed.py
tests/integration/: test_adaptation.py  test_full_pipeline.py
tests/smoke/: test_api.py
tests/unit/: test_face_detector.py  test_losses.py  test_metric_head.py  test_monitor.py  test_spatial_encoder.py  test_temporal_encoder.py  test_video_loader.py
